--- a/P010673.opf/layers/v001/Pagination.yml
+++ b/P010673.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2e1502723fdd4be490e50a0b2034b0d6
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   05f236d05f6c4e91a490d1844d330f81:
