--- a/P010673.opf/meta.yml
+++ b/P010673.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010673
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG15977
   title: དབུ་མའི་སྤྱི་དོན་སྐལ་བཟང་མགུལ་རྒྱན་གྱི་དགོངས་དོན་གསལ་བར་བྱེད་པའི་ཡང་གསལ་སྒྲོན་མེ།
